# SuperLocalMemoryV2

./: .gitattributes  .gitignore  .lfsconfig  .npmignore  ARCHITECTURE.md  ATTRIBUTION.md  AUTHORS.md  CHANGELOG-ARCHIVE.md  CHANGELOG.md  CITATION.cff  CNAME  CONTRIBUTING.md  Dockerfile.innosetup  GIF-CREATION-SUMMARY.md  INSTALL.md  QUALITY-CHECK-RESULTS.md  QUICKSTART.md  README.md  SCREENSHOT-OPTIMIZATION-REPORT.md  SCREENSHOT-QUICK-REFERENCE.md  SCREENSHOTS.md  SECURITY.md  SKILL.md  THUMBNAILS-QUICK-REFERENCE.md  THUMBNAIL_GENERATION_REPORT.md  add_attribution.py  annotate_screenshots.py  api_server.py  build-dmg.sh  build-exe.ps1  build-exe.sh  capture-screenshots.py  config.json  conftest.py  create-demo-data.py  create_demo_db.py  index.html  install-skills.sh  install.ps1  install.sh  (+33 more)
.github/: FUNDING.yml
.github/workflows/: build-dmg.yml  build-installer.yml  deploy-website.yml  pypi-publish.yml  test.yml
_astro/: _slug_.CPD4efxZ.css
assets/: CONTACT-SHEET-README.md  README.md  contact-sheet.html
assets/gifs/: QUICK-REFERENCE.md  README.md  USAGE.md
assets/screenshots/: OPTIMIZATION.md  README.md  generate-videos.py  optimization-stats.json
assets/thumbnails/: README.md  gallery.html  index.json
assets/videos/: README.md
backup/session-handoffs/: SESSION-HANDOFF-2026-05-28-v3.4.55.md
blog/: index.html
claude-skills/: INSTALLATION.md  README.md  superlocalmemoryv2-graph-build.md  superlocalmemoryv2-graph-stats.md  superlocalmemoryv2-list-skill.md  superlocalmemoryv2-patterns.md  superlocalmemoryv2-profile-skill.md  superlocalmemoryv2-recall-skill.md  superlocalmemoryv2-remember-skill.md  superlocalmemoryv2-reset-skill.md  superlocalmemoryv2-status-skill.md
comparison/: index.html
completions/: slm.bash  slm.zsh
configs/: antigravity-mcp.json  chatgpt-desktop-mcp.json  claude-desktop-mcp.json  codex-mcp.toml  cody-commands.json  continue-mcp.yaml  continue-skills.yaml  cursor-mcp.json  gemini-cli-mcp.json  opencode-mcp.json  perplexity-mcp.json  vscode-copilot-mcp.json  windsurf-mcp.json  zed-mcp.json
docs/: ACCESSIBILITY.md  ARCHITECTURE-V2.5.md  ARCHITECTURE.md  CLI-COMMANDS-REFERENCE.md  COMPETITIVE-ANALYSIS.md  COMPLETE-FEATURE-LIST.md  COMPRESSION-README.md  FRAMEWORK-INTEGRATIONS.md  GRAPH-ENGINE.md  GRAPH_ENGINE_README.md  MCP-MANUAL-SETUP.md  MCP-TROUBLESHOOTING.md  PATTERN-LEARNING.md  PROFILES-GUIDE.md  RESET-GUIDE.md  SEARCH-ENGINE-V2.2.0.md  SEARCH-INTEGRATION-GUIDE.md  UI-SERVER.md  UNIVERSAL-INTEGRATION.md  V2.2.0-OPTIONAL-SEARCH.md  WINDOWS-INSTALL-README.txt  WINDOWS-POST-INSTALL.txt  api-reference.md  architecture-diagram.drawio  auto-memory.md  cli-reference.md  compliance.md  configuration.md  example_graph_usage.py  getting-started.md  ide-setup.md  index.html  mcp-tools.md  migration-from-v2.md  multi-machine.md  profiles.md  troubleshooting.md
examples/: langchain_example.py  llamaindex_example.py
features/: index.html
hooks/: context-hook.js  memory-list-skill.js  memory-profile-skill.js  memory-recall-skill.js  memory-remember-skill.js  memory-reset-skill.js  post-recall-hook.js
integrations/: __init__.py  crewai_memory.py  langchain_memory.py
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/langchain_superlocalmemory/: __init__.py  chat_message_history.py
integrations/langchain/tests/: __init__.py  test_chat_message_history.py  test_security.py
integrations/llamaindex/: README.md  pyproject.toml
integrations/llamaindex/llama_index/storage/chat_store/superlocalmemory/: __init__.py  base.py
integrations/llamaindex/tests/: __init__.py  test_chat_store.py  test_security.py
routes/: __init__.py  agents.py  backup.py  data_io.py  events.py  helpers.py  learning.py  memories.py  profiles.py  stats.py  ws.py
scripts/: generate-thumbnails.py  install.ps1  install.sh  postinstall.js  preuninstall.js  verify-v27.sh
src/: agent_registry.py  auth_middleware.py  auto_backup.py  cache_manager.py  db_connection_manager.py  embedding_engine.py  event_bus.py  graph_engine.py  hnsw_index.py  hybrid_search.py  memory-profiles.py  memory-reset.py  memory_compression.py  memory_store_v2.py  migrate_v1_to_v2.py  pattern_learner.py  provenance_tracker.py  query_optimizer.py  rate_limiter.py  search_engine_v2.py  setup_validator.py  subscription_manager.py  tree_manager.py  trust_scorer.py  webhook_dispatcher.py
tests/: conftest.py  test-sl-memory-path.sh  test-system.sh  test_auto_hooks.py  test_before_web_hook.py  test_claude_hooks.py  test_cli.py  test_cli_json.py  test_cli_v33.py  test_compliance_full.py  test_connection_manager.py  test_edge_cases.py  test_event_bus.py  test_final_locomo_mini.py  test_fresh_install.py  test_graph_v265.py  test_hook_handlers.py  test_ide_connector.py  test_infra.py  test_injection.py  test_learning_advanced.py  test_learning_collectors.py  test_learning_e2e.py  test_llm_provider.py  test_mcp_server.py  test_migration.py  test_mode_switch_preservation.py  test_post_install.py  test_regression_v27.py  test_sl_memory_path.py  test_topic_shift_hook.py  test_trust_full.py
tools/: create_gifs.py  optimize_event_stream.py  optimize_gifs.py
ui/: app.js  index.html
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
wiki-content/: 4-Layer-Architecture.md  A2A-Integration.md  Advanced-Search.md  Architecture-V2.5.md  CLI-Cheatsheet.md  Comparison-Deep-Dive.md  Configuration.md  DEPLOYMENT-CHECKLIST.md  FAQ.md  Home.md  Installation.md  Knowledge-Graph-Guide.md  LangChain-Integration.md  Learning-System.md  LlamaIndex-Integration.md  MCP-Integration.md  Modes-Explained.md  Multi-Profile-Workflows.md  NEW-PAGES-SUMMARY.md  Pattern-Learning-Explained.md  Performance-Benchmarks.md  Python-API.md  Quick-Start-Tutorial.md  README.md  Real-Time-Event-System.md  Roadmap.md  Universal-Architecture.md  Universal-Skills.md  Upgrading-to-v2.7.md  Using-Interactive-Graph.md  V3-Architecture.md  V3-Mathematical-Foundations.md  Visualization-Dashboard.md  WIKI-UPDATE-SUMMARY.md  Why-Local-Matters.md  _Footer.md  _Sidebar.md
(+657 files in other folders)
