[project]
name = "superlocalmemory"
version = "3.4.5"
description = "Information-geometric agent memory with mathematical guarantees"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11,<3.15"
authors = [
    {name = "Varun Pratap Bhardwaj", email = "admin@superlocalmemory.com"},
]
keywords = [
    "ai-memory", "mcp-server", "local-first", "agent-memory",
    "information-geometry", "privacy-first", "eu-ai-act",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.24.0",
    "numpy>=1.26.0,<3.0.0",
    "scipy>=1.12.0,<2.0.0",
    "networkx>=3.0",
    "mcp>=1.0.0",
    "python-dateutil>=2.9.0.post0",
    "rank-bm25>=0.2.2",
    "vadersentiment>=3.3.2",
    "einops>=0.8.2",
    "fastapi[all]>=0.135.1",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
    "lightgbm>=4.0.0",
    "diskcache>=5.6.0",
    "orjson>=3.9.0",
    # CodeGraph — code knowledge graph (v3.4)
    "tree-sitter>=0.23.0,<1",
    "tree-sitter-language-pack>=0.3,<2",
    "rustworkx>=0.15,<1",
    "watchdog>=4.0,<6",
    # V3.4.3: Unified Brain
    "psutil>=5.9.0",
    "structlog>=24.0.0,<27.0.0",
]

[project.optional-dependencies]
search = [
    "sentence-transformers[onnx]>=5.0.0",
    "einops>=0.8.2",
    "torch>=2.2.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "geoopt>=0.5.0",
    "onnxruntime>=1.17.0",
]
ui = [
    "fastapi[all]>=0.135.1",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.6,<1.0.0",
]
learning = [
    "lightgbm>=4.0.0",
]
performance = [
    "diskcache>=5.6.0",
    "orjson>=3.9.0",
]
ingestion = [
    "keyring>=25.0.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.100.0",
    "icalendar>=6.0.0",
]
full = [
    "superlocalmemory[search,ui,learning,performance,ingestion]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "sqlite-vec>=0.1.6",
]

[project.urls]
Homepage = "https://superlocalmemory.com"
Repository = "https://github.com/qualixar/superlocalmemory"
Documentation = "https://github.com/qualixar/superlocalmemory/wiki"
Issues = "https://github.com/qualixar/superlocalmemory/issues"

[project.scripts]
slm = "superlocalmemory.cli.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
superlocalmemory = ["ui/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "ollama: marks tests that require a running Ollama instance",
]
filterwarnings = [
    "ignore::DeprecationWarning:vaderSentiment",
]

[tool.coverage.run]
source = ["superlocalmemory"]
omit = [
    "*/tests/*",
    "*/ui/*",
    "*/cli/*",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "twine>=6.2.0",
]
