[project]
name = "superlocalmemory"
version = "3.4.43"
description = "Information-geometric agent memory with mathematical guarantees"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11,<3.15"
authors = [
    {name = "Varun Pratap Bhardwaj", email = "admin@superlocalmemory.com"},
]
keywords = [
    "ai-memory", "mcp-server", "local-first", "agent-memory",
    "information-geometry", "privacy-first", "eu-ai-act",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.24.0",
    "numpy>=1.26.0,<3.0.0",
    "scipy>=1.12.0,<2.0.0",
    "networkx>=3.0",
    "mcp>=1.0.0",
    "python-dateutil>=2.9.0.post0",
    "rank-bm25>=0.2.2",
    "vadersentiment>=3.3.2",
    "einops>=0.8.2",
    "fastapi[all]>=0.135.1",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
    "lightgbm>=4.0.0",
    "orjson>=3.9.0",
    # CodeGraph — code knowledge graph (v3.4)
    "tree-sitter>=0.23.0,<1",
    "tree-sitter-language-pack>=0.5,<1",
    "rustworkx>=0.15,<1",
    "watchdog>=4.0,<6",
    # V3.4.3: Unified Brain
    "psutil>=5.9.0",
    "structlog>=24.0.0,<27.0.0",
    # Cross-platform file locking for single-daemon enforcement.
    "portalocker>=2.7.0,<4.0.0",
    # V3.4.18: Semantic search + cross-encoder reranker (npm install parity).
    # Previously under [search] extra — pip users silently lost 30pp of recall
    # quality vs. npm users. Now ships by default for both install paths.
    # v3.4.43: bumped from >=5.0.0 to >=5.2.0 so the resolver doesn't pick
    # 5.0.0-5.1.2 which cap transformers<5.0.0 (security headroom for when
    # optimum-onnx upstream eventually supports transformers 5.x).
    "sentence-transformers[onnx]>=5.2.0",
    # NOTE on CVE-2026-1839 (transformers Trainer.torch.load RCE):
    # SLM does NOT use transformers.Trainer (inference-only path via
    # sentence-transformers + ONNX backend). The vulnerable method
    # Trainer._load_rng_state is never called by SLM code, so the CVE is
    # unreachable through SLM's API surface. We CANNOT pin transformers>=5.0.0
    # because optimum-onnx 0.1.0 (latest upstream) caps transformers<4.58.0
    # and SLM's embedding_worker.py:68 hard-codes backend="onnx". Will
    # tighten this pin in a future release once optimum-onnx ships a
    # transformers-5.x-compatible build.
    "torch>=2.2.0",
    "scikit-learn>=1.3.0,<2.0.0",
]

[project.optional-dependencies]
# `search` is now a no-op alias kept for backwards compatibility; the deps
# moved into core in v3.4.18. ``pip install superlocalmemory[search]`` still
# works but installs nothing extra.
search = [
    "sentence-transformers[onnx]>=5.2.0",
    "einops>=0.8.2",
    "torch>=2.2.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "geoopt>=0.5.0",
    "onnxruntime>=1.17.0",
]
ui = [
    "fastapi[all]>=0.135.1",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.6,<1.0.0",
]
learning = [
    "lightgbm>=4.0.0",
]
performance = [
    "orjson>=3.9.0",
]
ingestion = [
    "keyring>=25.0.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.100.0",
    "icalendar>=6.0.0",
]
full = [
    "superlocalmemory[search,ui,learning,performance,ingestion]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "sqlite-vec>=0.1.6",
]

[project.urls]
Homepage = "https://superlocalmemory.com"
Repository = "https://github.com/qualixar/superlocalmemory"
Documentation = "https://github.com/qualixar/superlocalmemory/wiki"
Issues = "https://github.com/qualixar/superlocalmemory/issues"

[project.scripts]
slm = "superlocalmemory.cli.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
superlocalmemory = ["ui/**/*", "skills/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not slow and not ollama and not benchmark'"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow — real engine/model loading (run with: pytest -m slow)",
    "ollama: marks tests that require a running Ollama instance",
    "benchmark: marks CI-only evo-memory benchmark tests (run with: pytest tests/test_benchmarks/ -m benchmark)",
    "asyncio: marks tests as async — runs via pytest-asyncio (auto-mode in this project)",
]
filterwarnings = [
    "ignore::DeprecationWarning:vaderSentiment",
]

[tool.coverage.run]
source = ["superlocalmemory"]
omit = [
    "*/tests/*",
    "*/ui/*",
    "*/cli/*",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21",
    "twine>=6.2.0",
]
