[project]
name = "superlocalmemory"
version = "3.5.4"
description = "Information-geometric agent memory with mathematical guarantees"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11,<3.15"
authors = [
    {name = "Varun Pratap Bhardwaj", email = "admin@superlocalmemory.com"},
]
keywords = [
    "ai-memory", "mcp-server", "local-first", "agent-memory",
    "information-geometry", "privacy-first", "eu-ai-act",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # All versions hard-pinned to the verified-good combination.
    # Mixing versions outside these pins triggers per-batch memory
    # blow-up in the embedding worker on Apple Silicon and breaks
    # recall/remember latency targets. Update only after benchmarking.
    "httpx==0.28.1",
    "numpy==2.4.4",
    "scipy==1.17.1",
    "networkx==3.6.1",
    "mcp==1.27.1",
    "python-dateutil==2.9.0.post0",
    "rank-bm25==0.2.2",
    "vadersentiment==3.3.2",
    "einops==0.8.2",
    "fastapi[all]==0.136.1",
    "uvicorn==0.46.0",
    "websockets==16.0",
    "zeroconf>=0.140",
    "lightgbm==4.6.0",
    "orjson==3.11.9",
    "tree-sitter==0.25.2",
    "tree-sitter-language-pack==0.13.0",
    "rustworkx==0.17.1",
    "watchdog==5.0.3",
    "psutil==7.2.2",
    "structlog==25.5.0",
    "portalocker==3.2.0",
    # Semantic search + cross-encoder reranker. Do NOT use
    # sentence-transformers[onnx] — its extras pull optimum which
    # overrides the sentence-transformers pin via transitive deps.
    # Pin all three explicitly instead.
    "sentence-transformers==5.3.0",
    "optimum==2.1.0",
    "onnxruntime==1.24.4",
    "transformers==4.57.6",
    "huggingface_hub==0.36.2",
    "torch==2.11.0",
    "scikit-learn==1.8.0",
    # Vector KNN extension for the semantic channel.
    "sqlite-vec==0.1.9",
]

[project.optional-dependencies]
# `search` is now a no-op alias kept for backwards compatibility; the deps
# moved into core in v3.4.18. ``pip install superlocalmemory[search]`` still
# works but installs nothing extra.
search = [
    # Same hard pin as core deps — no [onnx] extra.
    "sentence-transformers==5.3.0",
    "optimum==2.1.0",
    "einops==0.8.2",
    "torch==2.11.0",
    "scikit-learn==1.8.0",
    "geoopt>=0.5.0",
    "onnxruntime==1.24.4",
]
ui = [
    "fastapi[all]>=0.135.1",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.6,<1.0.0",
]
injection = [
    "tiktoken>=0.8.0",
]
learning = [
    "lightgbm>=4.0.0",
]
performance = [
    "orjson>=3.9.0",
]
ingestion = [
    "keyring>=25.0.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.100.0",
    "icalendar>=6.0.0",
]
full = [
    "superlocalmemory[search,ui,learning,performance,ingestion,injection]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "sqlite-vec>=0.1.6",
]

[project.urls]
Homepage = "https://superlocalmemory.com"
Repository = "https://github.com/qualixar/superlocalmemory"
Documentation = "https://github.com/qualixar/superlocalmemory/wiki"
Issues = "https://github.com/qualixar/superlocalmemory/issues"

[project.scripts]
slm = "superlocalmemory.cli.main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
superlocalmemory = ["ui/**/*", "skills/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not slow and not ollama and not benchmark'"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow — real engine/model loading (run with: pytest -m slow)",
    "ollama: marks tests that require a running Ollama instance",
    "benchmark: marks CI-only evo-memory benchmark tests (run with: pytest tests/test_benchmarks/ -m benchmark)",
    "asyncio: marks tests as async — runs via pytest-asyncio (auto-mode in this project)",
]
filterwarnings = [
    "ignore::DeprecationWarning:vaderSentiment",
]

[tool.coverage.run]
source = ["superlocalmemory"]
omit = [
    "*/tests/*",
    "*/ui/*",
    "*/cli/*",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.21",
    "twine>=6.2.0",
]
