[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-superlocalmemory"
version = "0.1.0"
description = "LangChain chat message history backed by SuperLocalMemory V2 — 100% local, zero cloud"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Varun Pratap Bhardwaj" },
]
keywords = ["langchain", "memory", "local-first", "privacy", "sqlite", "chat-history", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain-core>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/varun369/SuperLocalMemoryV2"
Documentation = "https://varun369.github.io/SuperLocalMemoryV2/"
Repository = "https://github.com/varun369/SuperLocalMemoryV2"

[tool.pytest.ini_options]
testpaths = ["tests"]
