[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-index-storage-chat-store-superlocalmemory"
version = "0.1.0"
description = "LlamaIndex chat store backed by SuperLocalMemory V2 — 100% local, zero cloud"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Varun Pratap Bhardwaj" },
]
keywords = ["llamaindex", "llama-index", "memory", "local-first", "privacy", "sqlite", "chat-store", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "llama-index-core>=0.13.0,<0.15",
]

[project.urls]
Homepage = "https://github.com/varun369/SuperLocalMemoryV2"
Documentation = "https://varun369.github.io/SuperLocalMemoryV2/"
Repository = "https://github.com/varun369/SuperLocalMemoryV2"

[tool.hatch.build.targets.wheel]
packages = ["llama_index"]

[tool.llamahub]
contains_example = false
import_path = "llama_index.storage.chat_store.superlocalmemory"

[tool.llamahub.class_authors]
SuperLocalMemoryChatStore = "varun369"

[tool.pytest.ini_options]
testpaths = ["tests"]
